chore: update var name

--- a/docs/languages/typescript/methodology-ts.mdx
+++ b/docs/languages/typescript/methodology-ts.mdx
@@ -386,7 +386,7 @@ async function run() {
     throw new Error("failed to create stream: received null value");
   }
 
-  for await (const event of res.chatStream) {
+  for await (const event of result.chatStream) {
     process.stdout.write(event.data.content)
   }
 }
