--- a/guides/sdks/typescript-monorepo-tips.mdx
+++ b/guides/sdks/typescript-monorepo-tips.mdx
@@ -13,7 +13,7 @@ If you're looking to set up a monorepo from scratch, check out our [Create a mon
 
 ## Dependency Confusion
 
-The most common issue we see is dependency confusion. This happens when a developer have multiple versions of the same dependency across different packages in the monorepo.
+The most common issue we see is dependency confusion. This happens when developers have multiple versions of the same dependency across different packages in the monorepo.
 
 ### Why is this a problem?
 
