--- a/openapi/responses/retries.mdx
+++ b/openapi/responses/retries.mdx
@@ -191,3 +191,16 @@ When retrying requests, it's a good idea to suggest an exponential backoff
 approach, as a server which is struggling to keep up with requests does not need
 to be hammered with even more requests. Sometimes it needs a moment to recover,
 and clients giving larger gaps between retries can help with that.
+
+### Document alternative solutions
+
+Once the maximum number of retries has been reached, it's is likely to be an
+actual outage instead of simply a blip in availability. The API client and their
+end-users should be informed of this, and given alternative solutions to the
+problem. This could be a link to a status page, or a support email address.
+
+For example, at a coworking space, when the conference room booking system was
+down, the client would replace the "Submit Booking" button with a message saying
+"The booking system is down, please email somebody@example.org". OpenAPI is a
+great way to communicate this sort of information to API clients so they can use
+it to inform their users.
