--- a/openapi/responses/retries.mdx
+++ b/openapi/responses/retries.mdx
@@ -204,3 +204,29 @@ down, the client would replace the "Submit Booking" button with a message saying
 "The booking system is down, please email somebody@example.org". OpenAPI is a
 great way to communicate this sort of information to API clients so they can use
 it to inform their users.
+
+```yaml
+responses:
+  "503":
+    description: Service Unavailable
+    headers:
+      Retry-After:
+        description: The number of seconds to wait before making another request.
+        schema:
+          type: integer
+        example: 3600
+    content:
+      application/problem+json:
+        schema:
+          type: object
+          properties:
+            type:
+              type: string
+              const: "https://example.com/probs/service-unavailable"
+            title:
+              type: string
+              const: Service Unavailable
+            detail:
+              type: string
+              const: The service is currently unavailable, please try again later, or contact support@example.org to report the issue.
+```
