--- a/api-design/caching.mdx
+++ b/api-design/caching.mdx
@@ -287,7 +287,7 @@ In order for a user to pick their seat on the train, there could be a sub-resour
 GET /bookings/:my_booking_ref/seating
 ```
 
-```
+```json
 {
   "my_seat": "A12",
   "available_seats": [
