--- a/docs/customize/runtime/pagination.mdx
+++ b/docs/customize/runtime/pagination.mdx
@@ -4,7 +4,7 @@ sidebar_label: "Add Pagination"
 slug: "/customize-sdks/pagination/"
 ---
 
-# Adding Pagination to SDKs
+# Adding pagination to SDKs
 
 Customize pagination rules for each API operation using the `x-speakeasy-pagination` extension.
 
@@ -20,9 +20,9 @@ while response is not None:
 
 The `next()` function returns `nil, nil` when there are no more pages to retrieve, indicating the end of pagination rather than an error
 
-## Configuring Pagination
+## Configuring pagination
 
-To configure pagination, add the `x-speakeasy-pagination` extension to your OpenAPI specification.
+To configure pagination, add the `x-speakeasy-pagination` extension to the OpenAPI description.
 
 ```yaml
 /paginated/endpoint:
@@ -60,7 +60,7 @@ To configure pagination, add the `x-speakeasy-pagination` extension to your Open
 
 The `x-speakeasy-pagination` configuration supports `offsetLimit`, `cursor`, and `url` implementations of pagination.
 
-### Offset and Limit Pagination
+### Offset and limit pagination
 
 For `type: offsetLimit pagination`, specify at least one of the following `inputs`: `offset` or `page`.
 
@@ -128,7 +128,9 @@ x-speakeasy-pagination:
     results: $.data.resultArray # The length of data.resultArray value of the response will be added to the `offset` value to determine the new offset
 ```
 
-### Cursor-Based Pagination
+
+
+### Cursor-based pagination
 
 For `type: cursor pagination`, configure the `nextCursor` output. This pagination type uses a cursor value from the previous response.
 
@@ -169,9 +171,9 @@ At least one response object must have the following structure:
 
 The `[-1]` syntax in `outputs.nextCursor` indicates the last value in an array using JSONPath negative indexing. Ensure the type of `requestBody.since` matches the type of `outputs.nextCursor`.
 
-### URL-Based Pagination
+### URL-based pagination
 
-When your API returns a URL for the next page, you can use the `url` type in `x-speakeasy-pagination`. Here's an example configuration:
+When an API returns a URL for the next page, you can use the `url` type in `x-speakeasy-pagination`. Here's an example configuration:
 
 ```yaml
 /paginated/endpoint:
