chore: fix typo

--- a/api-design/consistency.mdx
+++ b/api-design/consistency.mdx
@@ -21,7 +21,7 @@ automated enforcement, centralized API gateways, and thorough review processes.
 
 ## Define an API style guide
 
-As 100 developers how to do something and you'll get 101 answers on the best way
+Ask 100 developers how to do something and you'll get 101 answers on the best way
 to do it, and this can become a real headache when building APIs.
 
 Instead of picking unique approaches to everything, and API style guide can be
