composition in general and for request bodies

--- a/openapi/requests.mdx
+++ b/openapi/requests.mdx
@@ -297,4 +297,4 @@ requestBody:
           - $ref: "#/components/schemas/IDEAL"
 ```
 
-{/* Learn more about this concept in the [schema composition](/openapi/schemas/composition) guide. */}
+Learn more about this concept in the [schema composition](/openapi/schemas/composition) guide.
