[PMM-291] OpenAPI: Components (#28)
Co-authored-by: Chai Landau <112015853+chailandau@users.noreply.github.com>

--- a/openapi/components.mdx
+++ b/openapi/components.mdx
@@ -1,87 +1,178 @@
 ---
 title: "Components in OpenAPI best practices"
-description: "Master the Components Object in OpenAPI to efficiently reuse schema definitions, parameters, responses, and more across your API specification."
+description: "Master the Components Object in OpenAPI to efficiently reuse schema definitions, parameters, responses, and more across API descriptions."
 ---
 
-# Components Object in OpenAPI
+# Components in OpenAPI
 
 import { Table } from "@/mdx/components";
 
-The Components Object is a container for reusable objects that can be referenced across the API. These objects can be referenced using [References](/openapi/references), and generally are only valid if referenced by other parts of the API.
+The Components object in OpenAPI are reusable bits of OpenAPI description, which
+can then be [referenced](/openapi/references). Reusing components allows for
+smaller file-sizes, reduces conflicts, and improves consistency across the API.
+Components can even be shared them across multiple documents, allowing for
+improved reuse between multiple APIs.
+
+```yaml
+components:
+  schemas:
+    User:
+      type: object
+      properties:
+        id:
+          type: integer
+        name:
+          type: string
+        email:
+          type: string
+          format: email
+  parameters:
+    userId:
+      name: uuid
+      in: path
+      description: Unique UUIDv4 of the user
+      required: true
+      schema:
+        type: string
+        format: uuid
+  responses:
+    NotFound:
+      description: User not found
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/Error'
+  requestBodies:
+    User:
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/User'
+  securitySchemes:
+    bearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
+```
+
+Components can be referenced in other parts of the OpenAPI document using the
+`$ref` keyword. The `$ref` keyword is a JSON Pointer to the component, which
+is a string that starts with `#/components/` and then the component type
+and name. For example, to reference the `User` schema defined in the
+Components Object, you would use the following `$ref`:
+
+```yaml
+responses:
+  '200':
+    description: User found
+    content:
+      application/json:
+        schema:
+          $ref: '#/components/schemas/User'
+```
+
+To put it all together, here is an example of how to reference all the various components in that previous example:
+
+```yaml
+paths:
+  /users/{userId}:
+    get:
+      summary: Get a user by UUID
+      parameters:
+        - $ref: '#/components/parameters/userId'
+      responses:
+        '200':
+          description: User found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+        '404':
+          $ref: '#/components/responses/NotFound'
+      security:
+        - bearerAuth: []
+```
+
+## Components Object
+
+The Components Object is a map of reusable components broken down by type. 
+
+```yaml
+components:
+  <componentType>:
+    <componentName>:
+      <componentDefinition>
+```
+
+The component name can be any valid string, but it is recommended to use a
+consistent naming convention across the API. A common naming convention is `PascalCase` or `camelCase`.
+
+```yaml
+components:
+  schemas:
+    Train:
+    Station:
+    BookingPayments:
+```
+
+Here are the supported component types as of OpenAPI v3.1:
 
 <Table
   data={[
     {
       field: "`schemas`",
       type: "Map[string, [Schema Object](/openapi/schemas)]*",
-      required: "",
       description: "A map of [Schema Objects](/openapi/schemas) that can be referenced by other parts of the API.\n\n**Note: OpenAPI 3.0.x does support [OpenAPI Reference Objects](/openapi/references#openapi-reference-object) as the value here, but `3.1.x` uses the [JSON Schema Referencing](/openapi/schemas#json-schema--openapi) format.**"
     },
     {
       field: "`securitySchemes`",
       type: "Map[string, [Security Scheme Object](/openapi/security/security-schemes) \\| [OpenAPI Reference Object](/openapi/references#openapi-reference-object)]*",
-      required: "",
       description: "A map of [Security Scheme Objects](/openapi/security/security-schemes) that can be referenced by other parts of the API."
     },
     {
       field: "`pathItems`",
       type: "Map[string, [Path Item Object](/openapi/paths#path-item-object) \\| [OpenAPI Reference Object](/openapi/references#openapi-reference-object)]*",
-      required: "",
       description: "A map of [Path Item Objects](/openapi/paths#path-item-object) that can be referenced by other parts of the API."
     },
     {
       field: "`parameters`",
       type: "Map[string, [Parameter Object](/openapi/paths/parameters#parameter-object) \\| [OpenAPI Reference Object](/openapi/references#openapi-reference-object)]*",
-      required: "",
       description: "A map of [Parameter Objects](/openapi/paths/parameters#parameter-object) that can be referenced by other parts of the API."
     },
     {
       field: "`requestBodies`",
       type: "Map[string, [Request Body Object](/openapi/paths/operations/requests) \\| [OpenAPI Reference Object](/openapi/references#openapi-reference-object)]*",
-      required: "",
       description: "A map of [Request Body Objects](/openapi/paths/operations/requests) that can be referenced by other parts of the API."
     },
     {
       field: "`responses`",
       type: "Map[string, [Response Object](/openapi/paths/operations/responses#response-object) \\| [OpenAPI Reference Object](/openapi/references#openapi-reference-object)]*",
-      required: "",
       description: "A map of [Response Objects](/openapi/paths/operations/responses#response-object) that can be referenced by other parts of the API."
     },
     {
       field: "`headers`",
       type: "Map[string, [Header Object](/openapi/paths/operations/responses/headers) \\| [OpenAPI Reference Object](/openapi/references#openapi-reference-object)]*",
-      required: "",
       description: "A map of [Header Objects](/openapi/paths/operations/responses/headers) that can be referenced by other parts of the API."
     },
     {
       field: "`examples`",
       type: "Map[string, [Example Object](/openapi/examples) \\| [OpenAPI Reference Object](/openapi/references#openapi-reference-object)]*",
-      required: "",
       description: "A map of [Example Objects](/openapi/examples) that can be referenced by other parts of the API."
     },
     {
       field: "`callbacks`",
       type: "Map[string, [Callback Object](/openapi/paths/operations/callbacks#callback-object) \\| [OpenAPI Reference Object](/openapi/references#openapi-reference-object)]*",
-      required: "",
       description: "A map of [Callback Objects](/openapi/paths/operations/callbacks#callback-object) that can be referenced by other parts of the API."
     },
     {
       field: "`links`",
       type: "Map[string, [Link Object](/openapi/paths/operations/responses/links#link-object) \\| [OpenAPI Reference Object](/openapi/references#openapi-reference-object)]*",
-      required: "",
       description: "A map of [Link Objects](/openapi/paths/operations/responses/links#link-object) that can be referenced by other parts of the API."
-    },
-    {
-      field: "`x-*`",
-      type: "[Extensions](/openapi/extensions)",
-      required: "",
-      description: "Any number of extension fields can be added to the Components Object that can be used by tooling and vendors."
     }
   ]}
   columns={[
     { key: "field", header: "Field" },
     { key: "type", header: "Type" },
-    { key: "required", header: "Required" },
     { key: "description", header: "Description" }
   ]}
 />
