fixed copy pasta link

--- a/openapi/pagination.mdx
+++ b/openapi/pagination.mdx
@@ -20,7 +20,7 @@ pagination controls in the interface such as "Page 1", "Page 2", or simply
 "Next" and "Previous" buttons.
 
 You can learn more about various approaches to pagination in the API design guide
-[here](https://www.moesif.com/blog/api-design-guide/pagination/).
+[here](/api-design-guide/pagination/).
 
 This guide will show you how to implement pagination in OpenAPI, regardless of
 which strategy the API has chosen.
